Solve overflow out of containers due to 100% height
100% is literally 100% of the parent container. It's not flexible based
on what's remaining in the container. That's what flex is for and would
do what you originally wanted. Grid might achieve something similar
with a small gap between the projects heading and below container. But
grid is overkill here. Flexbox is easier for this vertical solution.

--- a/styles/style.css
+++ b/styles/style.css
@@ -51,12 +51,15 @@ div.container {
     border-radius: 0.9rem;
 }
 
-.article > .wrapper {
+/*.wrapper .projects is now set to display flex block*/
+.wrapper.projects {
     grid-area: 1 / 1 / 3 / 2;
+    display: flex;
+    flex-direction: column;
 }
 
 .projects-container {
-    min-height: 100%;
+    flex-grow: 1;
     display: grid;
     grid: auto-flow 1fr / repeat(2, 1fr);
     gap: var(--gap);
